--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -101,6 +101,31 @@
   }
 }
 
+.atension {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
+  height: 300px;
+
+  & h2 {
+    text-align: center;
+    color: #0a264f;
+    font-family: 'open';
+    font-size: 1.5rem;
+  }
+
+  & p {
+    width: 90%;
+    max-width: 250px;
+    color: #0a264f;
+    font-family: 'open';
+    font-size: 1rem;
+    text-align: center;
+  }
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -336,7 +361,7 @@
   width: 100%;
   max-width: 800px;
   font-family: 'open';
-  height: 400px;
+  height: 350px;
 
 
   & h2 {
@@ -349,7 +374,7 @@
     color: #0a264f;
     font-size: 1rem;
     text-align: center;
-    max-width: 350px;
+    max-width: 300px;
   }
 
   & h3 {
@@ -401,7 +426,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 400px;
+  height: 350px;
   color: #fff;
   font-family: 'open';
   background: linear-gradient(45deg, #0a264f, #3c7ce2, #0a264f);
